@@ -1,3 +1,8 @@
+2019-04-03  Dominique d'Humieres  <dominiq@gcc.gnu.org>
+
+	PR fortran/68567
+	* gfortran.dg/parameter_array_error_1.f90: New test.
+
 2019-04-03  qing zhao  <qing.zhao@oracle.com>
 
 	PR tree-optimization/89730
